src/common/styles/utils/content.comment.css
.u-content-comment {
  line-height: 1.6;

  & > * {
    margin: 0;
  }

  & > * + * {
    margin: var(--spacing-base) 0;
  }

  & > *:last-child {
    margin-bottom: 0;
  }

  & p {
    /* FIXME: Firefox eats trailing spaces
     *
     * @see {@url https://github.com/quilljs/quill/issues/1760}
     */
    white-space: pre-wrap;
  }

  /* FIXME: first line of code has some indent */
  & code {
    padding: 0;
  }

  /* Media
   ========================================================================== */
  & img,
  video,
  audio {
    display: block;
    margin: 0 auto;

    /* max-height: 100vh; */
  }

  /* Figure
   ========================================================================== */
  & figure {
    text-align: center;

    & figcaption {
      padding: 0 var(--spacing-base);
      margin-top: var(--spacing-x-tight);
      font-size: var(--font-size-sm-s);
      color: var(--color-grey);
    }
  }

  /* Blockquote
   ========================================================================== */
  & blockquote {
    position: relative;
    padding: 0 var(--spacing-base);

    &::before {
      position: absolute;
      top: 0;
      left: 0;
      width: 4px;
      height: 100%;
      content: '';
      background: var(--color-grey-light);
    }
  }

  /* List
   ========================================================================== */
  & ul,
  & ol {
    padding-left: var(--spacing-loose);
  }

  & li {
    padding-left: var(--spacing-x-tight);
    margin: var(--spacing-x-tight) 0;
  }

  & ul {
    list-style-type: disc;
  }

  & ol {
    list-style-type: decimal;
  }

  /* Heading
   ========================================================================== */
  & h1 {
    font-size: var(--font-size-article-h1);
  }

  & h2 {
    font-size: var(--font-size-article-h2);
  }

  & h3 {
    font-size: var(--font-size-article-h3);
  }

  & h4 {
    font-size: var(--font-size-article-h4);
  }

  & h5 {
    font-size: var(--font-size-article-h5);
  }

  & h6 {
    font-size: var(--font-size-article-h6);
  }

  & h1,
  & h2,
  & h3,
  & h4,
  & h5,
  & h6 {
    margin-top: var(--spacing-loose);
    line-height: var(--line-height-article-heading);
  }

  /* Link
   ========================================================================== */
  & a {
    color: var(--color-matters-green);

    &:hover,
    &:active,
    &:focus {
      color: var(--color-matters-green-dark);
    }
  }

  /* fix frequent misuse of links */
  & u > a,
  ins > a {
    padding-bottom: 0;
    border-bottom: 0;
  }

  /* Misc
   ========================================================================== */
  & hr {
    display: block;
    width: 10rem;
    height: 0.125rem;
    margin: var(--spacing-loose) auto;
    border: 0;
    border-top: 1px solid var(--color-line-grey-dark);
    border-bottom: 1px solid var(--color-line-grey-dark);
  }
}

